--- a/main.tex
+++ b/main.tex
@@ -12,12 +12,14 @@
 %
 \usepackage[utf8]{inputenc}				% input encoding für vim/utf8/Umlaute
 \usepackage[T1]{fontenc}
-\usepackage{lmodern} 
+\usepackage[osf]{mathpazo}
+\usepackage{microtype}
 %
 % -----------------------------------------------------
-\usepackage{geometry} 					% legt die Blattgröße und Randabstände fest
-\geometry{a4paper}
-\geometry{margin=3cm,top=2.5cm,bottom=2.5cm}
+\KOMAoptions{DIV=calc}
+%\usepackage{geometry} 					% legt die Blattgröße und Randabstände fest
+%\geometry{a4paper}
+%\geometry{margin=3cm,top=2.5cm,bottom=2.5cm}
 %
 %
 %
@@ -55,7 +57,7 @@
 \usepackage{fancyhdr} % This should be set AFTER setting up the page geometry
 \pagestyle{fancy} % options: empty , plain , fancy
 %\renewcommand{\headrulewidth}{0pt} % customise the layout...
-\lhead{Markus Knösel}\chead{}\rhead{\textsc{Physikalische Chemie II}}
+\lhead{Markus Herrmann}\chead{}\rhead{\textsc{Physikalische Chemie II}}
 %\lfoot{}\cfoot{\thepage}\rfoot{}
 %
 %
@@ -84,7 +86,7 @@
 	\subject{Theoretische Grundlagen}
 	\title{Die fraktionierte Destillation}
 	\subtitle{3835 - Praktikum Verfahrenstechnik und Umweltschutz}
-	\author{\small M. Knösel}
+	\author{\small M. Herrmann}
 	\date{} % Activate to display a given date or no date (if empty),
 %\publishers{\normalsize \includegraphics[width=4cm]{unilogo} \\ Fachbereich IV \\ Abteilung für Chemie}
 %
@@ -143,3 +145,4 @@ WEITER nächstes Mal
 \textsc{Jander Blasius} (1995): \textit{Einführung in das anorganisch-chemische Praktikum}, von Prof. Dr. J. Strähle und Priv.Doz. Dr. E. Schwea, 14., neu bearbeitete Auflage, S. Hirzel Verlag, Stuttgart
 %
 \end{document}
+
